fixed spacing

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -17,6 +17,7 @@ h1{
     padding-left: 40%;
     top: 1px;
     font-size: 150%;
+    color: #cdd1c4ff;
 }
 nav{
     display: flex;
