--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -16,7 +16,7 @@
         font-family: Arimo;
         position: absolute;
         padding-left: 40%;
-        top: 13%;
+        top: 15%;
     }
     ul{
         display: flex;
